--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,19 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: 'Helvetica';
+  src: url('../public/fonts/Helvetica.ttf');
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica-Bold';
+  src: url('../public/fonts/Helvetica-Bold.ttf');
+  font-style: normal;
+}
+
 html,
 body {
   padding: 0;
@@ -13,14 +29,4 @@ a {
 
 * {
   box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
 }
